# Initializer

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  aliyun-sources.list.template  debug_cache_location.py  debug_config_loading.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  test_auto_yes.py  test_batch_checker.py  test_comprehensive_detection.py  test_integration.py  test_mixed_software_system.py  test_node_neovim_issue.py  test_two_layer_checker.py  test_ui_event_loop_simulation.py  test_ui_refresh_simulation.py  uninstall.sh
.claude/: codex-sessions.json  context-initial.json  context-question-1.json  operations-log.md  review-report.md
.claude/plan/: app-manager-interrupt-feature-1.md  app-manager-interrupt-feature.md
.cursor/: README.md  instructions.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_guidelines.md  suggested_commands.md  task_completion.md
.shrimp/: tasks.json
.shrimp/memory/: tasks_memory_2025-10-27T09-08-10.json  tasks_memory_2025-10-30T08-54-25.json
01-linux-initial-scripts/: 00-main.sh  01-change-package-download-mirror-to-local.sh  04-linux-user-init.sh
01-linux-initial-scripts/00-assets/: 00-assets-index.sh  01-ansi-escape-code.sh  02-constant.sh
config/: aliyun-sources.list.template  app.yaml  applications_apt.yaml  applications_homebrew.yaml  logging.yaml  modules.yaml  themes.yaml
docs/: README_zh-CN.md
src/: __init__.py  app.py  main.py  styles.css
tools/: check-test-environment.sh  reset-terminal.sh  sync-to-remote.sh
(+102 files in other folders)
